WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285607
Fix smart pointer warning in wtf/NativePromise.h
https://bugs.webkit.org/show_bug.cgi?id=285607
Summary
Fix smart pointer warning in wtf/NativePromise.h
Rob Buis
Reported
Wednesday, January 8, 2025 4:22:19 PM UTC
Fix smart pointer warning in wtf/NativePromise.h.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
Wednesday, January 8, 2025 4:46:40 PM UTC
Pull request:
https://github.com/WebKit/WebKit/pull/38728
EWS
Comment 2
Thursday, January 9, 2025 9:22:38 AM UTC
Committed
288645@main
(feecca6b87b6): <
https://commits.webkit.org/288645@main
> Reviewed commits have been landed. Closing PR #38728 and removing active labels.
Radar WebKit Bug Importer
Comment 3
Thursday, January 9, 2025 9:23:14 AM UTC
<
rdar://problem/142604289
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug