Fix smart pointer warning in wtf/NativePromise.h https://bugs.webkit.org/show_bug.cgi?id=285607

Reviewed by Chris Dumez.

The static analyzer reports:
NativePromise.h:753:38: warning: Captured raw-pointer 'this' to ref-counted type or CheckedPtr-capable type is unsafe

Instead of capturing 'this' we can just use the reffed protectedThis to fix the warning.

* Source/WTF/SaferCPPExpectations/UncountedLambdaCapturesCheckerExpectations:
* Source/WTF/wtf/NativePromise.h:

Canonical link: https://commits.webkit.org/288645@main